--- a/.github/workflows/workflow2.yml
+++ b/.github/workflows/workflow2.yml
@@ -1,5 +1,8 @@
 name: My second workflow
-on: [push]
+on: 
+  pull_request:
+    branches:
+      - main
 jobs:
   My-second-workflow-adjusted:
     runs-on: ubuntu-latest
