--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -78,7 +78,7 @@ jobs:
         with:
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           script: |
-            const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
+            const output = `#### Terraform Format and Style: \`${{ steps.fmt.outcome }}\`
             #### Terraform Initialization: \`${{ steps.init.outcome }}\`
             #### Terraform Plan: \`${{ steps.plan.outcome }}\`
             #### Terraform Validation: \`${{ steps.validate.outcome }}\`
