--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -49,7 +49,7 @@ jobs:
 
       # Ensure that the terraform code follows best practices
       - name: Terraform Format
-        id: fmt
+        id: format
         run: terraform fmt -check
       
       # Initialize terraform to ensure all providers/plugins are current
