--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,5 +1,3 @@
-# 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
-
 name: "terraform"
 # This workflow expects will run automatically when a PR is created, updated, or synchronized.
 # Those events cause a terraform plan to be exeucuted and the results of the plan are added
@@ -14,15 +12,10 @@ name: "terraform"
 # ARM_TENANT_ID: The tenant ID of the 
 
 on:
-  #push:
-  #  branches:
-  #    - main
-  pull_request: 
-    types:
-      - opened
-      - synchronize
-      - reopened
-      - closed
+  push:
+    branches:
+      - main
+  pull_request:
 
 jobs:
   terraform:
@@ -54,7 +47,7 @@ jobs:
 
       # Ensure that the terraform code follows best practices
       - name: Terraform Format
-        id: format
+        id: fmt
         run: terraform fmt -check
       
       # Initialize terraform to ensure all providers/plugins are current
@@ -115,7 +108,7 @@ jobs:
       # A branch protection should *ALSO* be set to only allow merges (no direct pushes)
       - name: Terraform Apply
         id: apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push' && github.event.pull_request.merged == true
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve        
         continue-on-error: false
 
