--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -1,4 +1,4 @@
-name: "terraform"
+name: "secrets"
 # This workflow expects will run automatically when a PR is created, updated, or synchronized.
 # Those events cause a terraform plan to be exeucuted and the results of the plan are added
 # to the PR as a comment.  Until the plan phase succeeds, the PR cannont be be merged into
@@ -17,48 +17,51 @@ on:
       - main
   pull_request:
 
-jobs:
-  terraform:
-    name: 'Terraform'
+  jobs:
+  secrets:
+    name: 'Secrets'
     runs-on: ubuntu-latest
-    env:
-      TF_IN_AUTOMATION: "true" # any non-empty value to set
     steps:
+      # Spill with GitHub Script
+      - name: GitHub Script
+        id: script
+        env:
+          MYSECRET: ${{ secrets.MYSECRET }}
+          MYSECRET2: ${{ secrets.MYSECRET2 }}
+        uses: actions/github-script@0.9.0
+        with:
+          github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
+          script: |
+            echo $MYSECRET
+            echo $MYSECRET2
+        continue-on-error: true
+        
+      # Normal run operation
+      - name: Normal run
+        id: run
+        env:
+          MYSECRET: ${{ secrets.MYSECRET }}
+          MYSECRET2: ${{ secrets.MYSECRET2 }}
+        run: |
+            echo $MYSECRET
+            echo $MYSECRET2
+        continue-on-error: true
+
       # Check out the repository
       - name: Checkout
         id: checkout
         uses: actions/checkout@v2
-      
-      # Set git configuration variables
-      - name: Configure multi-repo credential substitution
-        run: |
-          git config --local user.name "ucsf-devops-bot"
-          git config --local url."https://${GH_TOKEN}@github.com/UCSF-DevOps".insteadOf "https://github.com/UCSF-DevOps"
-          git config --global user.name "ucsf-devops-bot"
-          git config --global url."https://${GH_TOKEN}@github.com/UCSF-DevOps".insteadOf "https://github.com/UCSF-DevOps"
-        env:
-          GH_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-      
+            
       - name: Setup Terraformsecrets.GH_PERSONAL_ACCESS_TOKEN
         uses: hashicorp/setup-terraform@v1
         with:
           # terraform_version: 0.13.0
           cli_config_credentials_token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-
-      # Ensure that the terraform code follows best practices
-      - name: Terraform Format
-        id: fmt
-        run: terraform fmt -check
       
       # Initialize terraform to ensure all providers/plugins are current
       - name: Terraform Init
         id: init
         run: terraform init
-      
-      # Validate the terraform configuration
-      - name: Terraform Validate
-        id: validate
-        run: terraform validate -no-color
       
       # Execute the planning phase of terraform
       - name: Terraform Plan
@@ -97,28 +100,3 @@ jobs:
               repo: context.repo.repo,
               body: output
             })
-      
-      # If the plan status is failure, 
-      - name: On Terraform Plan Failure
-        id: on_failure
-        if: steps.plan.outcome == 'failure'
-        run: exit 1
-      
-      # If this is a push to master, execute the apply phase of terraform
-      # A branch protection should *ALSO* be set to only allow merges (no direct pushes)
-      - name: Terraform Apply
-        id: apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve        
-        continue-on-error: false
-
-      # FOR DEMO PURPOSES ONLY
-      # This commit and push is only to get the .tfstate files into git post APPLY since
-      # state is stored locally.
-      - name: Git commit and merge
-        id: git_merge
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: |
-          echo "Merging to master" && git add . && git commit -m"Auto merge from workflow" && git push
-
-      
