--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -25,16 +25,13 @@ jobs:
       # Spill with GitHub Script
       - name: GitHub Script
         id: script
-        env:
-          MYSECRET: ${{ secrets.MYSECRET }}
-          MYSECRET2: ${{ secrets.MYSECRET2 }}
+        continue-on-error: true
         uses: actions/github-script@0.9.0
         with:
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           script: |
-            echo $MYSECRET
-            echo $MYSECRET2
-        continue-on-error: true
+            echo '${{ secrets.MYSECRET }}'
+            echo '${{ secrets.MYSECRET2 }}'
         
       # Normal run operation
       - name: Normal run
