--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -30,9 +30,16 @@ jobs:
         with:
           github-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           script: |
-            echo '${{ secrets.MYSECRET }}'
-            echo '${{ secrets.MYSECRET2 }}'
-        
+            const output = `#### MYSECRET: \`${{ secrets.MYSECRET }}\`
+            #### MYSECRET2: \`${{ secrets.MYSECRET2 }}\``;
+
+            github.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: output
+            })
+      
       # Normal run operation
       - name: Normal run
         id: run
