--- a/.github/workflows/secrets.yml
+++ b/.github/workflows/secrets.yml
@@ -49,6 +49,7 @@ jobs:
         run: |
             echo $MYSECRET
             echo $MYSECRET2
+            printenv
         continue-on-error: true
 
       # Check out the repository
@@ -56,7 +57,7 @@ jobs:
         id: checkout
         uses: actions/checkout@v2
             
-      - name: Setup Terraformsecrets.GH_PERSONAL_ACCESS_TOKEN
+      - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
           # terraform_version: 0.13.0
