--- a/.github/workflows/rebuild-workspace.yml
+++ b/.github/workflows/rebuild-workspace.yml
@@ -1,4 +1,4 @@
-name: "Ansible:rebuild-workspace"
+name: "Ansible: az-account-creation"
 # This workflow expects that you have created a branch which will become the target of workspace updates.  
 #                  -----------        DO NOT RUN THIS FROM MASTER!      -----------
 # Typically, the workflow would be: 1) create branch 2) push updates to account-specific host variable file
@@ -16,7 +16,7 @@ on:
         required: true
         default: 'account'
       account_name:
-        description: 'The full name of the account. Only required when target_type = account'
+        description: 'The name of the account. Only required when target_type = account'
         required: false
         default: 'ucsfit-customer1'
       workspace:
@@ -29,30 +29,21 @@ on:
         default: 'hipaa'
 
 jobs:
-  rebuild_terraform_workspace:
-    name: "rebuild-workspace"
+  determine_accounts_to_run:
+    name: "determine_accounts"
     runs-on: ubuntu-latest
     outputs:
-      branch: ${{ steps.extract_branch.outputs.branch }}
+      customer_files: ${{ steps.inventory_path.outputs.customer_files }}
     steps:
-      # Get the branch name that this workflow is being run against
-      - name: Extract branch name
-        shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-        id: extract_branch
-
-      # Print the branch name to the output
-      - name: Display branch name
-        run: echo "${{ steps.extract_branch.outputs.branch }}"
-
       # Determine the path to the customer yml file based on inputs and iterpolation
       - name: Determine Inventory Path
         id: inventory_path
         run:  |
           env=${{ github.event.inputs.environment }}
-          account_name=${{ github.event.inputs.account_name }}
-          inventory_path="@./inventories/$env/group_vars/accounts/az-westus-$account_name-$env.yml"
-          echo "::set-output name=inventory_path::$inventory_path"
+          path="./inventories/$env/group_vars/accounts"
+          cd $path
+          files=($(find -E . -type f -regex "^.*$"))          
+          echo "::set-output name=customer_files::$files"
         if: ${{ github.event.inputs.target_type == 'account' && ((steps.extract_branch.outputs.branch != 'master') && (steps.extract_branch.outputs.branch != 'main')) }}
 
       # Print the inventory path to the output
@@ -60,73 +51,3 @@ jobs:
         id: debug_inventory_path
         run: echo "${{ steps.inventory_path.outputs.inventory_path }}"
         if: ${{ github.event.inputs.target_type == 'account' && ((steps.extract_branch.outputs.branch != 'master') && (steps.extract_branch.outputs.branch != 'main')) }}
-
-      # Checkout the branch that the workflow is being run against
-      - name: Checkout the branch
-        uses: actions/checkout@v2
-        if: ${{ (steps.extract_branch.outputs.branch != 'master') && (steps.extract_branch.outputs.branch != 'main') }}
-        with:
-          ref: ${{ steps.extract_branch.outputs.branch }}
-
-      # Run Ansible playbook to rebuild the specified workspace(s)
-      - name: 'Run Ansible playbook az-account-creation.yml'
-        if: ${{ github.event.inputs.target_type == 'account' && ((steps.extract_branch.outputs.branch != 'master') && (steps.extract_branch.outputs.branch != 'main')) }}
-        uses: dawidd6/action-ansible-playbook@v2
-        with:
-          playbook: az-account-creation.yml
-          directory: ./Ansible/playbooks/
-          key:
-          inventory: |
-            [all]
-            localhost=127.0.0.1
-          options: |
-            --extra-vars ansible_action=base 
-            --extra-vars hub_env=${{ github.event.inputs.environment }} 
-            --extra-vars account_type=${{ github.event.inputs.account_type }} 
-            --extra-vars git_dir="../../" 
-            --extra-vars branch=${{ steps.extract_branch.outputs.branch }} 
-            --extra-vars "{{ steps.inventory_path.outputs.inventory_path }}" 
-            --diff
-      
-      # Ansible routine has modified some files.  Add all files to git, commit and push to the branch
-      - name: Commit changes to feature branch
-        if: ${{ (steps.extract_branch.outputs.branch != 'master') && (steps.extract_branch.outputs.branch != 'main') }}
-        uses: EndBug/add-and-commit@v7
-        with:
-          # The arguments for the `git add` command (see the paragraph below for more info)
-          # Default: '.'
-          add: '.'
-
-          # The name of the user that will be displayed as the author of the commit
-          # Default: depends on the default_author input
-          author_name: GitHub Actions
-
-          # The email of the user that will be displayed as the author of the commit
-          # Default: depends on the default_author input
-          #author_email:
-
-          # Name of the branch to use, if different from the one that triggered the workflow
-          branch: '${{ steps.extract_branch.outputs.branch }}'
-
-          # Determines the way the action fills missing author name and email. Three options are available:
-          # - github_actor -> UserName <UserName@users.noreply.github.com>
-          # - user_info -> Your Display Name <your-actual@email.com>
-          # - github_actions -> github-actions <email associated with the github logo>
-          # Default:
-          default_author: github_actions
-
-          # The message for the commit
-          # Default: 'Commit from GitHub Actions (name of the workflow)'
-          message: |
-            Update ${{ github.event.inputs.account_name }}-${{ github.event.inputs.workspace }}
-            Environment: ${{ github.event.inputs.environment }}
-            Account Name: ${{ github.event.inputs.account_name }}
-            Workspace: ${{ github.event.inputs.workspace }}
-
-          # The flag used on the pull strategy. Use NO-PULL to avoid the action pulling at all.
-          # Default: '--no-rebase'
-          pull_strategy: '--no-rebase'
-
-          # Whether to push the commit and, if any, its tags to the repo. It can also be used to set the git push arguments (see the paragraph below for more info)
-          # Default: true
-          push: true
