--- a/.github/workflows/rebuild-workspace.yml
+++ b/.github/workflows/rebuild-workspace.yml
@@ -41,8 +41,8 @@ jobs:
         run:  |
           env=${{ github.event.inputs.environment }}
           path="./inventories/$env/group_vars/accounts"
-          files=($(find -E . -type f -regex "^.*$"))          
-          echo "::set-output name=customer_files::$files"
+          set -A files *       
+          echo "::set-output name=customer_files::${files}"
         if: ${{ github.event.inputs.target_type == 'account' && ((steps.extract_branch.outputs.branch != 'master') && (steps.extract_branch.outputs.branch != 'main')) }}
 
       # Print the inventory path to the output
