--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -7,7 +7,7 @@ name: "terraform"
 
 on: 
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     types: [opened, synchronize, reopened]
     paths:
       - "Terraform/**"
@@ -19,272 +19,16 @@ jobs:
   # This job executes terraform init, fmt, validate, and plan when a PR is created
   # and on subsequent commits to the same PR branch. This workflow detects file changes
   # and only runs when ".tf" files within the workspace have been modified.
-  pr_changed_workspaces:
-    runs-on: self-hosted
-    if: ${{ github.event_name != 'issue_comment' }} 
-    env:
-      TF_IN_AUTOMATION: "true" # any non-empty value to set
-    outputs:
-      roots: ${{ steps.display_file_changes.outputs.unique_roots }}
-
-    steps:
-      # Determine which files changed as part of the PR to conditionally run TF tasks
-      - name: (PR) Determine file changes
-        uses: dorny/paths-filter@v2.10.2
-        id: file_changes
-        with:
-          filters: |
-            dev: 'Terraform/dev/**'
-            test: 'Terraform/test/**'
-            prod: 'Terraform/prod/**'
-            all: 'Terraform/**'
-          list-files: json
-          token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-
-        # Determine the changed files, remove file extensions (to determine Terraform
-        # root directory path), deduplicate root paths to ensure single run of the
-        # TF root/workspace, and reformat the result into a matrix-compatible output
-      - name: Display changed files JSON
-        id: display_file_changes
-        run: |
-          echo '${{ steps.file_changes.outputs.files }}'
-          echo '${{ steps.file_changes.outputs.changes }}'
-          echo '${{ steps.file_changes.outputs.all_files }}'
-          touch roots.txt
-          echo '${{ steps.file_changes.outputs.all_files }}' | sed -r 's/(\/[a-z|A-Z]+(.tf|.tfvars|.auto.tfvars|.json))//g' > roots.txt
-          touch unique_roots.txt
-          jq unique roots.txt > unique_roots.txt
-          cat unique_roots.txt | tr -d '\n' | tr -d ' ' > matrix.txt
-          echo "::set-output name=unique_roots::$(cat matrix.txt)"
-          rm roots.txt
-          rm unique_roots.txt
-          rm matrix.txt
-      - name: Debug target Terraform roots
-        run: |
-          echo '${{ steps.display_file_changes.outputs.unique_roots }}'
-
-  issue_comment_changed_workspaces:
-    runs-on: self-hosted
-    if: ${{ github.event_name == 'issue_comment' }}
-    env:
-      TF_IN_AUTOMATION: "true" # any non-empty value to set
-    outputs:
-      roots: ${{ steps.display_file_changes.outputs.unique_roots }}
-
-    steps:
-      # Checks-out your repository from the PR's branch
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-        # Because issue_comment actions always reference the main/master branch,
-        # we must determine the PR branch to use it as an explicit ref
-      - name: Get PR Branch
-        uses: actions/github-script@v3
-        if: ${{ github.event_name == 'issue_comment' }}
-        id: get_pr
-        with:
-          script: |
-            const request = {
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: context.issue.number
-            }
-            core.info(`Getting PR #${request.pull_number} from ${request.owner}/${request.repo}`)
-            try {
-              const result = await github.pulls.get(request)
-              return result.data
-            } catch (err) {
-              core.setFailed(`Request failed with error ${err}`)
-            }
-      # If the trigger was an issue/PR comment, determine which files changed
-      - name: (COMMENT) Determine file changes
-        uses: dorny/paths-filter@v2.10.2
-        id: file_changes
-        if: ${{ github.event_name == 'issue_comment' }}
-        with:
-          filters: |
-            dev: 'Terraform/dev/**'
-            test: 'Terraform/test/**'
-            prod: 'Terraform/prod/**'
-            all: 'Terraform/**'
-          list-files: json
-          ref: ${{ fromJSON(steps.get_pr.outputs.result).head.sha }}
-          #base: 
-          token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-
-
-        # Determine the changed files, remove file extensions (to determine Terraform
-        # root directory path), deduplicate root paths to ensure single run of the
-        # TF root/workspace, and reformat the result into a matrix-compatible output
-      - name: Display changed files JSON
-        id: display_file_changes
-        run: |
-          echo '${{ steps.file_changes.outputs.files }}'
-          echo '${{ steps.file_changes.outputs.changes }}'
-          echo '${{ steps.file_changes.outputs.all_files }}'
-          touch roots.txt
-          echo '${{ steps.file_changes.outputs.all_files }}' | sed -r 's/(\/[a-z|A-Z]+(.tf|.tfvars|.auto.tfvars|.json))//g' > roots.txt
-          touch unique_roots.txt
-          jq unique roots.txt > unique_roots.txt
-          cat unique_roots.txt | tr -d '\n' | tr -d ' ' > matrix.txt
-          echo "::set-output name=unique_roots::$(cat matrix.txt)"
-          rm roots.txt
-          rm unique_roots.txt
-          rm matrix.txt
-      - name: Debug target Terraform roots
-        run: |
-          echo '${{ steps.display_file_changes.outputs.unique_roots }}'
-
-  pr_tf_run:
-    name: "pr_tf_run"
-    runs-on: self-hosted
-    if: ${{ github.event_name != 'issue_comment' }}
-    needs: [ pr_changed_workspaces ]
-    env:
-      TF_IN_AUTOMATION: "true" # any non-empty value to set
-    strategy:
-      fail-fast: false
-      #max-parallel: 256
-      matrix: 
-        terraform_roots: ${{ fromJson(needs.pr_changed_workspaces.outputs.roots) }}
-    steps:
-      - name: Checkout repository branch
-        uses: actions/checkout@v2
-
-      # Get the Subscription_ID from accounts/terraform.auto.tfvars
-      - name: Get-SubscriptionID
-        id: subscription_id
-        run: |
-          cd ./${{ matrix.terraform_roots }}
-          cd ../account
-          input_file="terraform.auto.tfvars"
-          while read y
-          do
-            if [[ $y =~ "subscription_id" ]]; then
-              subscription_id=$(echo $y | sed 's/subscription_id//i' | sed 's/=//;s/"//;s/"//;s/ //g')
-              echo "::set-output name=subscription_id::$subscription_id"
-            fi
-          done < "$input_file"
-      # Get the runner's IP address
-#       - name: Get-RunnersIP
-#         id: runners_ip
-#         run: |
-#           ip=$(curl -s https://api.ipify.org)
-#           ip_formatted=$(echo $ip |sed 's/}//;s/{//;s/ip//;s/://g;s/"//g')
-#           echo "::set-output name=ip_formatted::$ip_formatted"
-#           echo $ip_formatted
-          
-      # Downloads and installs Terraform binaries, using the terraform_version specified
-#       - name: Install and configure Terraform
-#         uses: hashicorp/setup-terraform@v1
-#         with:
-#           cli_config_credentials_token: ${{ secrets.CLI_CONFIG_CREDENTIALS_TOKEN }}
-
-      - name: Configure multi-repo credential substitution
-        run: |
-          git config --local user.name "ucsf-devops-bot"
-          git config --local url."https://${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}@github.com/UCSF-DevOps".insteadOf "https://github.com/UCSF-DevOps"
-          git config --global user.name "ucsf-devops-bot"
-          git config --global url."https://${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}@github.com/UCSF-DevOps".insteadOf "https://github.com/UCSF-DevOps"
-        env:
-          GH_TOKEN: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-
-#       # Ensure all Terraform files are properly formatted
-#       - name: terraform fmt
-#         id: fmt
-#         #if: ${{ contains(steps.file_changes.outputs.files, '.tf') }}
-#         run: |
-#           cd ./${{ matrix.terraform_roots }}
-#           terraform fmt --check
-#         continue-on-error: true
-
-      # Change to workspace's directory and run 'terrafrom init'
-      - name: terraform init
-        id: init
-        #if: ${{ contains(steps.file_changes.outputs.files, '.tf') }}
-        run: |
-          cd ./${{ matrix.terraform_roots }}
-          terraform init
-        env:
-          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          ARM_SUBSCRIPTION_ID: ${{ steps.subscription_id.outputs.subscription_id }}
-          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_SESSION_TOKEN: ""
-          AWS_REGION: us-west-2   
-
-      # Change to workspace's directory and run 'terrafrom validate'
-      - name: terraform validate
-        id: validate
-        #if: ${{ contains(steps.file_changes.outputs.files, '.tf') }}
-        run: |
-          cd ./${{ matrix.terraform_roots }}
-          terraform validate
-      # Change to workspace's directory and run 'terrafrom plan'
-      - name: terraform plan
-        id: plan
-        #if: ${{ contains(steps.file_changes.outputs.files, '.tf') }}
-        run: |
-          cd ./${{ matrix.terraform_roots }}
-          #terraform force-unlock -force 1aa07978-1b2b-1526-a432-f237f42de491
-          #terraform plan -var 'runner_ip_address=${{ steps.runners_ip.outputs.ip_formatted }}'
-          terraform plan                    
-        continue-on-error: true
-        env:
-          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          ARM_SUBSCRIPTION_ID: ${{ steps.subscription_id.outputs.subscription_id }}
-          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_SESSION_TOKEN: ""
-          AWS_REGION: us-west-2
-
-      # Comment the results of Terraform operations back to the PR
-      - name: Comment Results
-        uses: actions/github-script@v3
-        #if: (github.event_name == 'pull_request') && (${{ contains(steps.file_changes.outputs.files, '.tf') }})
-        env:
-          PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
-            #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
-            #### Terraform Validation 🤖${{ steps.validate.outputs.stdout }}
-            #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
-            <details><summary>Show Plan</summary>
-            \`\`\`
-            ${process.env.PLAN}
-            \`\`\`
-            </details>
-            *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\`, Working Directory: \`${{ matrix.terraform_roots }}\`, Workflow: \`${{ github.workflow }}\`*`;
-            github.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: output
-            })
-
-      # If the terraform plan failed, we continued in order to add the output to the PR but the job
-      # should still fail.  This ensures that the job fails under those conditions.    
-      - name: On Terraform Plan Failure
-        id: on_failure
-        if: steps.plan.outcome == 'failure' 
-        run: exit 1
-   
+  
   manual_tf_run:
     name: "manual_tf_run"
     runs-on: self-hosted
     if: ${{ github.event_name == 'issue_comment' }}
-    needs: [ issue_comment_changed_workspaces ]
     strategy:
       fail-fast: false
       #max-parallel: 256
       matrix: 
-        terraform_roots: ${{ fromJson(needs.issue_comment_changed_workspaces.outputs.roots) }}
+        terraform_roots: ["this", "that"]
     steps:
       - name: Determine Command
         id: determine-command
