--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,7 +45,11 @@ jobs:
             commandArray = body.split(/\s+/)
             if (commandArray[0] == "terraform") {
               action = commandArray[1]
-              console.log("action: ${commandArray[1]}"")
+              console.log("action: ${commandArray[1]}")
 
+              
+            } 
+            else {
+              console.log("Detected non-applicable command. Job will not continue.")
             }
           
