--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -56,6 +56,32 @@ jobs:
                     console.log("apply command is not for this Terraform root");
                   }
                   break;
+                case "plan":
+                  if (typeof commandArray[2] === 'undefined') {
+                    console.log("::set-output name=do_plan::true")
+                  } else if (commandArray[2] == process.env.TF_ROOT.toLowerCase()) {
+                    console.log("::set-output name=do_plan::true")
+                  } else {
+                    console.log("plan command is not for this Terraform root")
+                  }
+                  break;
+                case "force-unlock":
+                  if (typeof commandArray[2] === 'undefined' || typeof commandArray[3] === 'undefined') {
+                    console.log("force-unlock command must have lock-id and Terraform root")                    
+                  }                   
+                  else if (commandArray[3] == process.env.TF_ROOT.toLowerCase()) {
+                    console.log(`lock-id: ${commandArray[3]}`)
+                    console.log("::set-output name=state_lock_id::${commandArray[3]}")
+                    console.log("::set-output name=do_unlock::true")
+                  } 
+                  else {
+                    console.log("force-unlock command is not for this Terraform root")
+                  }
+                  break
+                default:
+                  console.log("Only plan, apply, and force-unlock supported for terraform. Job will not continue.")
+                  break
+              }
             } 
             else {
               console.log("Detected non-applicable command. Job will not continue.")
