--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -51,31 +51,34 @@ jobs:
                   if (typeof commandArray[2] === 'undefined') {
                     console.log("::set-output name=do_apply::true");
                   } else if (commandArray[2] == process.env.TF_ROOT.toLowerCase()) {
+                    console.log(`workspace: ${commandArray[2]}`)
                     console.log("::set-output name=do_apply::true");
                   } else {
-                    console.log("apply command is not for this Terraform root");
+                    console.log("apply command is not for this workspace");
                   }
                   break;
                 case "plan":
                   if (typeof commandArray[2] === 'undefined') {
                     console.log("::set-output name=do_plan::true")
                   } else if (commandArray[2] == process.env.TF_ROOT.toLowerCase()) {
+                    console.log(`workspace: ${commandArray[2]}`)
                     console.log("::set-output name=do_plan::true")
                   } else {
-                    console.log("plan command is not for this Terraform root")
+                    console.log("plan command is not for this workspace")
                   }
                   break;
                 case "force-unlock":
                   if (typeof commandArray[2] === 'undefined' || typeof commandArray[3] === 'undefined') {
-                    console.log("force-unlock command must have lock-id and Terraform root")                    
+                    console.log("force-unlock command must have lock-id and workspace")                    
                   }                   
                   else if (commandArray[3] == process.env.TF_ROOT.toLowerCase()) {
-                    console.log(`lock-id: ${commandArray[3]}`)
+                    console.log(`lock-id: ${commandArray[2]}`)
+                    console.log(`workspace: ${commandArray[3]}`)
                     console.log("::set-output name=state_lock_id::${commandArray[3]}")
                     console.log("::set-output name=do_unlock::true")
                   } 
                   else {
-                    console.log("force-unlock command is not for this Terraform root")
+                    console.log("force-unlock command is not for this workspace")
                   }
                   break
                 default:
