--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -73,7 +73,7 @@ jobs:
                     console.log("force-unlock command must have lock-id and workspace")                    
                   }                   
                   else if (commandArray[3] == process.env.TF_ROOT.toLowerCase()) {
-                    console.log("::set-output name=state_lock_id::${commandArray[3]}")
+                    console.log("::set-output name=state_lock_id::" + commandArray[3])
                     console.log("::set-output name=do_unlock::true")
                   } 
                   else {
@@ -90,3 +90,10 @@ jobs:
             }
             console.log(context)
           
+      - name: Display output vars
+        id: display_file_changes
+        run: |
+          echo 'doapply: ${{ steps.determine-command.outputs.do_apply }}'
+          echo 'doplan: ${{ steps.determine-command.outputs.do_plan }}'
+          echo 'dounlock: ${{ steps.determine-command.outputs.do_unlock }}'
+          echo 'unlock_id: ${{ steps.determine-command.outputs.state_lock_id }}'
