--- a/.github/workflows/test_pipeline_exitcodes.yml
+++ b/.github/workflows/test_pipeline_exitcodes.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - run: |
           true | true
-          #exit ${PIPESTATUS[0]}
+          exit ${PIPESTATUS[0]}
       
   test_pipeline_exitcodes_succeed2:
     name: Succeeds2
@@ -18,12 +18,12 @@ jobs:
     steps:
       - run: |
           false | true
-          #exit ${PIPESTATUS[1]}
+          exit ${PIPESTATUS[1]}
           
   test_pipeline_exitcodes_fails:
     name: Fails
     runs-on: ubuntu-latest
     steps:
       - run: |
-          true | true
-          #exit ${PIPESTATUS[1]}
+          false | true
+          exit ${PIPESTATUS[1]}
