--- a/.github/workflows/array_to_json.yml
+++ b/.github/workflows/array_to_json.yml
@@ -9,10 +9,12 @@ on:
         default: 'identity, network, security, storage, operations'
 jobs:
   test_pipeline_exitcodes_succeed:
-    name: Succeeds
     runs-on: ubuntu-latest
+    outputs:
+      workspaces: ${{ steps.array2json.outputs.result }}
     steps:
       - uses: actions/github-script@v3
+        id: array2json
         with:
           script: |
             var base_array = '${{ github.event.inputs.workspaces }}'
@@ -20,4 +22,10 @@ jobs:
               return item.trim();
             });
             return JSON.stringify(arr);
-
+  matrix_job:
+    runs-on: ubuntu-latest    
+    needs: [ test_pipeline_exitcodes_succeed ]
+    strategy:
+      fail-fast: false
+      matrix: 
+        workflow: ${{ fromJson(needs.test_pipeline_exitcodes_succeed.outputs.workspaces) }}
