--- a/.github/workflows/array_to_json.yml
+++ b/.github/workflows/array_to_json.yml
@@ -29,3 +29,5 @@ jobs:
       fail-fast: false
       matrix: 
         workflow: ${{ fromJson(needs.test_pipeline_exitcodes_succeed.outputs.workspaces) }}
+    steps:
+      - run: echo "${{ matrix.workflow }}"
